Closed Bug 1564628 Opened 6 years ago Closed 6 years ago

Intermittent TelemetryGeckoViewFixture.PendingOperationsHighWater | Value of: value.isInt32()

Categories

(Toolkit :: Telemetry, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla70
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox68 --- unaffected
firefox69 --- unaffected
firefox70 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: janerik)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: ccoroiu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=255442803&repo=mozilla-central
Full log: https://queue.taskcluster.net/v1/task/OnIVrdwLQsqgxsOpVwSotg/runs/0/artifacts/public/logs/live_backing.log


22:22:00 INFO - TEST-START | TelemetryGeckoViewFixture.PendingOperationsHighWater
22:22:00 WARNING - TEST-UNEXPECTED-FAIL | TelemetryGeckoViewFixture.PendingOperationsHighWater | Value of: value.isInt32()
22:22:00 INFO - Actual: false
22:22:00 INFO - Expected: true
22:22:00 INFO - The scalar value must be of the correct type. @ z:/build/build/src/toolkit/components/telemetry/tests/gtest/TelemetryTestHelpers.cpp:29
22:22:00 WARNING - TEST-UNEXPECTED-FAIL | TelemetryGeckoViewFixture.PendingOperationsHighWater | Value of: value.isInt32()
22:22:00 INFO - Actual: false
22:22:00 INFO - Expected: true
22:22:00 INFO - The scalar value must be of the correct type. @ z:/build/build/src/toolkit/components/telemetry/tests/gtest/TelemetryTestHelpers.cpp:29
22:22:00 WARNING - TEST-UNEXPECTED-FAIL | TelemetryGeckoViewFixture.PendingOperationsHighWater | test completed (time: 4ms)
22:22:00 INFO - TEST-START | psm_OCSPCacheTest.TestPutAndGet

Expired probe. Looks like there's no data recorded, so I will remove it.

Assignee: nobody → jrediger
Status: NEW → ASSIGNED
Type: -- → defect
Priority: P5 → P1
Pushed by jrediger@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/68af8d44347c Remove expired highwatermark probe (GeckoView Telemetry buffering) r=chutten
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: