Bug 1564628 - Remove expired highwatermark probe (GeckoView Telemetry buffering) r=chutten

Differential Revision: https://phabricator.services.mozilla.com/D37535